--- a/Style/SCSS/Oversigt.scss
+++ b/Style/SCSS/Oversigt.scss
@@ -161,7 +161,7 @@
 
     }
 
-    #prices {
+    #oversigtprices {
         list-style-type: none;
         display: flex;
         flex-direction: column;
