--- a/Style/SCSS/Global.scss
+++ b/Style/SCSS/Global.scss
@@ -144,6 +144,7 @@ body {
     div {
         display: flex;
         justify-content: center;
+        text-align: left;
 
         p {
             font-size: 0.875rem;
