--- a/Style/SCSS/offline.scss
+++ b/Style/SCSS/offline.scss
@@ -21,38 +21,14 @@
         border-radius: 10px;
 
         h2 {
-            color: $eerieblack;
+            color: $antiflashwhite;
             font-size: 80px;
         }
 
         h3 {
-            color: var(--eerieblack);
+            color: $antiflashwhite;
             font-size: 25px;
         }
-
-        p {
-            color: var(--eerieblack);
-            font-size: 20px;
-        }
-
-        a {
-            text-align: center;
-            text-decoration: none;
-            color: var(--eerieblack);
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 28.13px;
-            border-radius: 3px;
-            padding: 6px 18px;
-            transition: all ease-out 0.3s;
-            cursor: pointer;
-        }
-
-        a:hover {
-            color: red;
-            transition: all ease-out 0.3s;
-        }
-
     }
 
 
