--- a/Style/css/Historik.css
+++ b/Style/css/Historik.css
@@ -1,12 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://fontawesome.com/icons/calendar-days?f=classic&s=solid");
 /* variables */
 /* Colors */
 /* Fonts */
 /* font-family: 'Roboto', sans-serif; */
-/* $spacingSmall: 4px;
-$spacingMedium: 8px;
-$spacingLarge: 16px; */
 :root {
   --green: #58ed21;
 }
@@ -25,7 +21,6 @@ body {
 /* Mobil size: width 375px */
 .nav {
   width: 100%;
-  max-width: 375px;
   margin: 0 auto;
   padding: 5px 16px 5px 16px;
   display: grid;
@@ -49,6 +44,14 @@ body {
 .nav div a:hover {
   box-shadow: 0px 0px 8px 2px rgba(85, 236, 32, 0.5);
   color: #58ed21;
+}
+@keyframes glow1 {
+  from {
+    box-shadow: 0 0 50px #55ec20, 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20;
+  }
+  to {
+    box-shadow: 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20, 0 0 80px #55ec20;
+  }
 }
 .nav div p {
   color: #58ed21;
@@ -96,7 +99,6 @@ body {
 
 .footer {
   width: 100%;
-  max-width: 375px;
   margin: 0 auto;
   padding: 22px 50px;
   display: grid;
@@ -124,8 +126,6 @@ body {
 
 #historik {
   background-color: #27282B;
-  width: 100%;
-  width: 375px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -177,7 +177,7 @@ body {
   border: none;
 }
 #historik #calender ::-webkit-datetime-edit-text {
-  color: #58ed21;
+  color: #EBEBEB;
   font-weight: 300;
   font-size: 1rem;
   line-height: 18.75;
@@ -214,14 +214,14 @@ body {
   text-align: center;
   margin-bottom: 15px;
 }
-#historik #prices {
+#historik #historikprices {
   list-style-type: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
 }
-#historik #prices li {
+#historik #historikprices li {
   width: 100%;
   background-color: #201E1E;
   width: 305px;
@@ -235,14 +235,14 @@ body {
   padding: 10px 16px;
   border-radius: 8px;
 }
-#historik #prices li .time {
+#historik #historikprices li .time {
   color: #EBEBEB;
   font-weight: 400;
   font-size: 0.938rem;
   line-height: 17.58px;
   text-align: center;
 }
-#historik #prices li .price {
+#historik #historikprices li .price {
   color: #58ed21;
   font-weight: 400;
   font-size: 0.938rem;
