--- a/Style/css/Oversigt.css
+++ b/Style/css/Oversigt.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://fontawesome.com/icons/calendar-days?f=classic&s=solid");
 /* variables */
 /* Colors */
 /* Fonts */
@@ -45,6 +44,14 @@ body {
 .nav div a:hover {
   box-shadow: 0px 0px 8px 2px rgba(85, 236, 32, 0.5);
   color: #58ed21;
+}
+@keyframes glow1 {
+  from {
+    box-shadow: 0 0 50px #55ec20, 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20;
+  }
+  to {
+    box-shadow: 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20, 0 0 80px #55ec20;
+  }
 }
 .nav div p {
   color: #58ed21;
@@ -243,14 +250,14 @@ body {
   text-align: center;
   margin-top: 5px;
 }
-#oversigt #prices {
+#oversigt #oversigtprices {
   list-style-type: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
 }
-#oversigt #prices li {
+#oversigt #oversigtprices li {
   width: 100%;
   background-color: #201E1E;
   width: 305px;
@@ -264,14 +271,14 @@ body {
   padding: 10px 16px;
   border-radius: 8px;
 }
-#oversigt #prices li .time {
+#oversigt #oversigtprices li .time {
   color: #EBEBEB;
   font-weight: 400;
   font-size: 0.938rem;
   line-height: 17.58px;
   text-align: center;
 }
-#oversigt #prices li .price {
+#oversigt #oversigtprices li .price {
   color: #58ed21;
   font-weight: 400;
   font-size: 0.938rem;
