--- a/Style/css/index.css
+++ b/Style/css/index.css
@@ -45,6 +45,14 @@ body {
   box-shadow: 0px 0px 8px 2px rgba(85, 236, 32, 0.5);
   color: #58ed21;
 }
+@keyframes glow1 {
+  from {
+    box-shadow: 0 0 50px #55ec20, 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20;
+  }
+  to {
+    box-shadow: 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20, 0 0 80px #55ec20;
+  }
+}
 .nav div p {
   color: #58ed21;
   font-weight: 500px;
