--- a/Style/SCSS/dashboard.scss
+++ b/Style/SCSS/dashboard.scss
@@ -55,6 +55,43 @@
             }
         }
 
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+
+            .modal-content {
+                background-color: #fefefe;
+                margin: 15% auto; /* 15% from the top and centered */
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%; /* Could be more or less, depending on screen size */
+
+                .close {
+                    color: #aaa;
+                    float: right;
+                    font-size: 28px;
+                    font-weight: bold;
+                }
+
+                .close:hover,
+                .close:focus {
+                color: black;
+                text-decoration: none;
+                cursor: pointer;
+                }
+
+            } 
+
+        }
+
         // @keyframes glow1 {
         //     from {
         //       box-shadow: 0 0 50px #55ec20, 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20;
