--- a/Style/SCSS/dashboard.scss
+++ b/Style/SCSS/dashboard.scss
@@ -55,42 +55,6 @@
             }
         }
 
-        .modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1; /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-
-            .modal-content {
-                background-color: #fefefe;
-                margin: 15% auto; /* 15% from the top and centered */
-                padding: 20px;
-                border: 1px solid #888;
-                width: 80%; /* Could be more or less, depending on screen size */
-
-                .close {
-                    color: #aaa;
-                    float: right;
-                    font-size: 28px;
-                    font-weight: bold;
-                }
-
-                .close:hover,
-                .close:focus {
-                color: black;
-                text-decoration: none;
-                cursor: pointer;
-                }
-
-            } 
-
-        }
 
         // @keyframes glow1 {
         //     from {
@@ -143,11 +107,39 @@
         }
     }
 
-    div {
+    // div {
+    //     display: flex;
+    //     align-items: center;
+    //     margin-right: 29px;
+    //     background-color: blue;
+        
+    //     .settinglink {
+    //         color: $sgbusgreen;
+    //         font-size: 23px;
+    //         cursor: pointer;
+    //         // display: none;
+    //     }
+
+    //     .settinglink:hover {
+    //         animation: rotate 2s linear infinite;
+    //     }
+
+    //     @keyframes rotate {
+    //         0% {
+    //             transform: rotate(0deg);
+    //         }
+    //         100% {
+    //             transform: rotate(360deg);
+    //         }
+    //     }
+        
+    // }
+
+    .wrapper {
         display: flex;
         align-items: center;
         margin-right: 29px;
-        
+
         .settinglink {
             color: $sgbusgreen;
             font-size: 23px;
@@ -160,15 +152,47 @@
         }
 
         @keyframes rotate {
-        0% {
-            transform: rotate(0deg);
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
-        100% {
-            transform: rotate(360deg);
-        }
+
     }
-        
+
+
+    .modal {
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: blue;
+        transition: all .4s;
     }
+
+    .modal:target {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .modal_conteny {
+        border-radius: 4px;
+        position: relative;
+        width: 500px;
+        max-width: 90%;
+        background: yellow;
+        padding: 1em 2em;
+    }
+
+
 
 
 }
