--- a/Style/css/dashboard.css
+++ b/Style/css/dashboard.css
@@ -160,37 +160,6 @@ body {
   font-size: 1rem;
   line-height: 18.75px;
 }
-.navdash div .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-.navdash div .modal .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-.navdash div .modal .modal-content .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-.navdash div .modal .modal-content .close:hover,
-.navdash div .modal .modal-content .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
 .navdash ul {
   list-style-type: none;
   display: grid;
@@ -222,17 +191,17 @@ body {
     text-shadow: 0 0 20px #55ec20, 0 0 30px #55ec20, 0 0 40px #55ec20, 0 0 50px #55ec20, 0 0 60px #55ec20, 0 0 70px #55ec20, 0 0 80px #55ec20;
   }
 }
-.navdash div {
+.navdash .wrapper {
   display: flex;
   align-items: center;
   margin-right: 29px;
 }
-.navdash div .settinglink {
+.navdash .wrapper .settinglink {
   color: #58ed21;
   font-size: 23px;
   cursor: pointer;
 }
-.navdash div .settinglink:hover {
+.navdash .wrapper .settinglink:hover {
   animation: rotate 2s linear infinite;
 }
 @keyframes rotate {
@@ -242,6 +211,32 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+.navdash .modal {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: blue;
+  transition: all 0.4s;
+}
+.navdash .modal:target {
+  visibility: visible;
+  opacity: 1;
+}
+.navdash .modal_conteny {
+  border-radius: 4px;
+  position: relative;
+  width: 500px;
+  max-width: 90%;
+  background: yellow;
+  padding: 1em 2em;
 }
 
 main {
